Fix: email verification URL updated for production